library/general/gpuactivedeadline/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: gpuactivedeadline
tests:
- name: gpu-job-with-deadline
  template: template.yaml
  constraint: samples/gpu-job-with-deadline/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/gpu-job-with-deadline/example_allowed.yaml
    assertions:
    - violations: no
- name: gpu-job-without-deadline
  template: template.yaml
  constraint: samples/gpu-job-without-deadline/constraint.yaml
  cases:
  - name: example-disallowed
    object: samples/gpu-job-without-deadline/example_disallowed.yaml
    assertions:
    - violations: yes
- name: non-gpu-job
  template: template.yaml
  constraint: samples/non-gpu-job/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/non-gpu-job/example_allowed.yaml
    assertions:
    - violations: no
